--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==5.2.7
+Django>=5.2.8
 django-simpleui>=2024.2.1
 mcstatus>=11.0.0
 django-debug-toolbar>=4.2.0
@@ -15,7 +15,7 @@ django-imagekit>=5.0.0
 pilkit>=3.0
 
 # 表单美化
-django-crispy-forms>=2.1
+django-crispy-forms>=2.5
 crispy-bootstrap5>=2.0.0
 
 # 静态文件压缩
